# dataclass_to_diagram_rs

./: .gitignore  Cargo.toml  README.md
dataclass_to_diagram_rs/: Cargo.toml
dataclass_to_diagram_rs/examples/c4/: _0.rs  _1.rs  _2.rs  _3.rs  _4.rs  main.rs
dataclass_to_diagram_rs/src/: lib.rs  runner.rs
dataclass_to_diagram_rs/src/application/: mod.rs  runner.rs
dataclass_to_diagram_rs/src/application/exporter_runner/: exporter_runner.rs  mod.rs  traits.rs
dataclass_to_diagram_rs/src/application/exporters/: export.rs  mod.rs  traits.rs
dataclass_to_diagram_rs/src/application/text_form_saver/: exporter_runner.rs
dataclass_to_diagram_rs/src/domain/: mod.rs  traits.rs
dataclass_to_diagram_rs/src/domain/models/: diagrams.rs  mod.rs  state_machine.rs  state_machine_builders.rs  state_machine_old.rs
dataclass_to_diagram_rs/src/domain/sprite/: mod.rs  sprites.rs
dataclass_to_diagram_rs/src/infrastructure/: file_writer.rs  folder_manipulation.rs  mod.rs
dataclass_to_diagram_rs/src/utils/: clone_utils.rs  mod.rs
dataclass_to_diagram_rs_test/: Cargo.toml
dataclass_to_diagram_rs_test/diagrams/: state_machine_1.puml  state_machine_2.puml  state_machine_3.puml  state_machine_4.puml  state_machine_5.puml  state_machine_6.puml  state_machine_7.puml
dataclass_to_diagram_rs_test/src/: dia1.rs  main.rs
dataclass_to_diagram_rs_test/src/state_machine/: _1_simple_state.rs  _2_change_state_rendering.rs  _3_composite_state.rs  _4_substate_to_substate.rs  _5_long_name.rs  _6_history.rs  _7_fork_join.rs  mod.rs
src/: lib.rs
(+48 files in other folders)
