[package]
name = "test_diagram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dataclass_to_diagram = { path = "../dataclass_to_diagram_rs" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
